# omnivyou

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile.toml  README.md  index-74e63c9621ecc78e.js  index-74e63c9621ecc78e_bg.wasm  index-85d9a45836b7619b.js  index-85d9a45836b7619b_bg.wasm  index-85e781e7411c22cd.js  index-85e781e7411c22cd_bg.wasm  index-fc01bfc19860d0e4.js  index-fc01bfc19860d0e4_bg.wasm  index.html  rustfmt.toml  tailwind.config.js
.github/actions/cargo/: Dockerfile  action.yml
.github/actions/preprocess/: Dockerfile  action.yml
.github/actions/trunk/: Dockerfile  action.yml
.github/workflows/: main.yml
rsrc/styles/: tailwind.css
src/: app.rs  main.rs
src/components/: media.rs  menu.rs  mod.rs  nav.rs  warning.rs
src/routes/: _home.rs  home.rs  media.rs  mod.rs
